# CopyPasteLLM

./: .env.example  .gitignore  README.md  demo.py  pyproject.toml
CopyPasteLLM/: __init__.py  client.py  config.py
CopyPasteLLM/metrics/: __init__.py
CopyPasteLLM/pipelines/: __init__.py  base.py  cp_link.py  cp_order.py  cp_refine.py
CopyPasteLLM/utils/: __init__.py  llm.py  text.py
examples/: basic_usage.py  batch_processing.py  pipeline_comparison.py
script/: upload_to_huggingface.py
